--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   flutter_svg: any
   snaplist: any
   http: any
+  calendar_strip: any
+  image_picker: any
+  tflite: any
+  image: any
 
 
 
@@ -65,6 +69,10 @@ flutter:
   assets:
     - images/
     - images/NutriCal_logo.jpeg
+    - assets/tflite/ssd_mobilenet.tflite
+    - assets/tflite/ssd_mobilenet.txt
+    - assets/tflite/yolov2_tiny.tflite
+    - assets/tflite/yolov2_tiny.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
